--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -6,13 +6,13 @@
       <div class="card">
         <div class="card-body">
             <div class="form-group">
-              <label for="username">Username (su)</label>
+              <label for="username">Username</label>
               <input type="email" class="form-control" [(ngModel)]="username"
               (keyup.enter)="onClick_Signin()"
                 aria-describedby="emailHelp">
             </div>
             <div class="form-group">
-              <label for="username">Password (su123#)</label>
+              <label for="username">Password</label>
               <input type="password" class="form-control"
               (keyup.enter)="onClick_Signin()"
                 [(ngModel)]="password">
