--- a/src/app/_layout/portal/portal.component.html
+++ b/src/app/_layout/portal/portal.component.html
@@ -8,7 +8,7 @@
         </h3>
         <hr>
         <h6 class="sidebar-heading d-flex justify-content-between
-          align-items-center px-3 mt-4 mb-1 text-muted">
+          align-items-center px-3 mt-1 mb-1 text-muted">
           <span>Manage</span>
         </h6>
         <!--
@@ -28,7 +28,7 @@
         </ul>
         <hr>
         <h6 class="sidebar-heading d-flex justify-content-between
-          align-items-center px-3 mt-4 mb-1 text-muted">
+          align-items-center px-3 mt-1 mb-1 text-muted">
           <span>Global</span>
         </h6>
         <ul class="nav flex-column mb-2">
@@ -39,7 +39,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/portal/contact']">
-              <fa name="address-card-o"></fa> Contacts
+              <fa name="address-book-o"></fa> Contacts
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/portal/contact']">
+              <fa name="list-alt"></fa> Collections
             </a>
           </li>
           <li class="nav-item">
