--- a/src/app/master/el/currency/currency.component.html
+++ b/src/app/master/el/currency/currency.component.html
@@ -12,6 +12,16 @@
     <small class="text text-muted">For example: Retail Price, Sale Price, etc</small>
   </div>
 </div>
-<hr>
-
+<div class="bg-light pt-3 pb-1 mt-2">
+    <div class="col-12 form-group">
+      <label>Size or Width of this field on the form:</label>
+      <select class="form-control" [(ngModel)]="el.size">
+          <option value="small">Small</option>
+          <option value="medium">Medium</option>
+          <option value="large">Large</option>
+      </select>
+    </div>
+  </div>
+  <hr>
 <button (click)="onClick_Submit()" class="btn btn-primary">Submit</button>
+<button (click)="onClick_Delete()" class=" float-right btn btn-danger">Delete</button>
