--- a/src/app/portal/config/config.component.html
+++ b/src/app/portal/config/config.component.html
@@ -14,7 +14,7 @@
         cfg?.config?.infra?.process">{{p.name | titlecase}}</li>
     </ul>
   </div>
-  <div class="col-10 col-md-10 pr-2">
+  <div class="col-7 col-lg-7 col-md-6 col-sm-6 pr-2">
     <div class="card">
       <div class="card-header">
         {{action | titlecase}}
@@ -23,56 +23,44 @@
           (click)="onClick_AddElement()">Add Element</span>
       </div>
       <div class="card-body">
-
         <div class="" *ngIf="is_add_element == true || is_edit_element == true">
           <app-element [config]="selected_obj" [editing_el]="editing_el"></app-element>
         </div>
         <div class="" *ngIf="is_add_obj == true">
-          <label>Menu Name:</label>
-          <input class="form-control" maxlength="100"
-            [(ngModel)]="new_obj_name">
-          <hr>
-          <button class="btn btn-primary" (click)="onSubmit_AddMenu()"> Submit</button>
+          <app-menu [editing_menu]="editing_menu"></app-menu>
         </div>
 
-        <div cdkDropList class="example-list"
-          (cdkDropListDropped)="drop($event)">
-          
-          <div *ngIf="is_obj_selected == true">
-            <div class="pt-3 pb-1 mb-1 bg-light"*ngFor="let f of
-              selected_obj?.fields" cdkDrag>
-              <div class="form-group col-md-6">
-                
-                <!-- label -->
-                <label *ngIf="f.type !='checkbox'">{{f.label}} </label> <small
-                  (click)="onClick_EditElement(f)" class="cursor float-right btn
-                  btn-sm text text-muted">[click to edit this field]</small>
-                <!-- textarea -->
-                  <textarea *ngIf="f.type=='textarea'"
-                  placeholder="{{f.placeholder}}"
-                  class="form-control" [(ngModel)]="el[f.name]">
-                </textarea>
-                <!-- text -->
-                <input *ngIf="f.type=='text'" placeholder="{{f.placeholder}}"
-                  class="form-control" [(ngModel)]="el[f.name]">
-                <!-- select -->
-                  <select *ngIf="f.type=='select'" class="form-control"
-                  [(ngModel)]="el[f.name]">
-                  <option *ngFor="let o of f.options" [value]="o.name">{{o.label}}</option>
-                </select>
-                <!-- checkbox -->
-                <div *ngIf="f.type=='checkbox'" class="custom-control
-                  custom-checkbox custom-checkbox-switch">
-                  <input type="hidden" [(ngModel)]="el[f.name]">
-                  <input type="checkbox" class="custom-control-input"
-                    [checked]="el[f.name] === _bool[0].value"
-                    (change)="$event.target.checked? (el[f.name]=
-                    _bool[0].value):(el[f.name]= _bool[1].value)"
-                    id="el[f.name]">
-                  <label class="custom-control-label" style="padding-top:2px;"
-                    for="el[f.name]"> {{f.label}} </label>
-                  <button class="btn btn-sm btn-default">EDIT</button>
-                </div>
+        <div class="row" *ngIf="is_obj_selected == true">
+          <div class="pt-1 form-row  {{f.size}} " *ngFor="let f of
+            selected_obj?.fields" >
+            <div class="form-group col-lg-12 col-md-12 col-md-12">
+              <!-- label -->
+              <label *ngIf="f.type !='checkbox'">{{f.label}} </label> 
+              <!-- textarea -->
+              <textarea *ngIf="f.type=='textarea'"
+                placeholder="{{f.placeholder}}"
+                class="form-control" [(ngModel)]="el[f.name]">
+              </textarea>
+              <!-- text -->
+              <input *ngIf="f.type=='text'" placeholder="{{f.placeholder}}"
+                class="form-control" [(ngModel)]="el[f.name]">
+              <!-- select -->
+              <select *ngIf="f.type=='select'" class="form-control"
+                [(ngModel)]="el[f.name]">
+                <option *ngFor="let o of f.options" [value]="o.name">{{o.label}}</option>
+              </select>
+              <!-- checkbox -->
+              <div *ngIf="f.type=='checkbox'" class="custom-control
+                custom-checkbox custom-checkbox-switch">
+                <input type="hidden" [(ngModel)]="el[f.name]">
+                <input type="checkbox" class="custom-control-input"
+                  [checked]="el[f.name] === _bool[0].value"
+                  (change)="$event.target.checked? (el[f.name]=
+                  _bool[0].value):(el[f.name]= _bool[1].value)"
+                  id="el[f.name]">
+                <label class="custom-control-label" style="padding-top:2px;"
+                  for="el[f.name]"> {{f.label}} </label>
+                <button class="btn btn-sm btn-default">EDIT</button>
               </div>
             </div>
           </div>
@@ -80,4 +68,28 @@
       </div>
     </div>
   </div>
+  <div class="col-3 col-lg-3 col-md-4 col-sm-4">
+    <small> Sort or Edit fields here.</small>
+    <div cdkDropList
+      (cdkDropListDropped)="drop($event)">
+      <div class="border bg-light pb-1 pt-1 pl-1 pr-1 mb-1 mr-2" *ngFor="let f of
+        selected_obj?.fields" cdkDrag>
+        <div class="float-right cursor pb-2" cdkDragHandle>
+          <svg width="24px" fill="#999" viewBox="0 0 24 24">
+            <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14
+              2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
+            <path d="M0 0h24v24H0z" fill="none"></path>
+          </svg>
+        </div>
+        {{f.name}}&nbsp;<small
+        (click)="onClick_EditElement(f)" class="cursor text text-info">[edit]</small>&nbsp;<small
+        (click)="onClick_TryDelete(f)" class="cursor text text-danger">[delete]</small>
+
+      </div>
+    </div>
+  </div>
 </div>
+
+
+<com-modal [forDelete]="true" (onSubmit)="onClick_DeleteField()" ></com-modal>
+
