--- a/src/app/master/menu/form/form.component.html
+++ b/src/app/master/menu/form/form.component.html
@@ -2,7 +2,7 @@
 	<div class="col-12 form-group">
 		<label>Name</label>
 		<input class="form-control" maxlength="100" [dropSpecialCharacters]="true"
-		mask="" [(ngModel)]="el.label">
+		mask="" [(ngModel)]="menu.name">
 		<small class="text text-muted">For example: Clients, Portfolio, Gallery, etc
 		Line 1, etc</small>
 	</div>
@@ -10,16 +10,16 @@
 <div class="bg-light pt-3 pb-1 mt-2">
 	<div class="col-4 form-group">
 		<label>This is Sub Item Of:</label>
-		<select class="form-control" [(ngModel)]="el.parent">
+		<select class="form-control" [(ngModel)]="menu.parent">
 		</select>
 	</div>
 </div>
 <div class="bg-light pt-3 pb-1 mt-2">
 	<div class="col-4 form-group">
 		<label>Status</label>
-		<select class="form-control" [(ngModel)]="el.statuc">
-		<option value="col-6">Active</option>
-		<option value="col-12">InActive</option>
+		<select class="form-control" [(ngModel)]="menu.status">
+		<option value="Active">Active</option>
+		<option value="InActive">InActive</option>
 		</select>
 	</div>
 </div>
