--- a/src/app/portal/config/menu/menu.component.html
+++ b/src/app/portal/config/menu/menu.component.html
@@ -15,7 +15,13 @@
 	<app-form  [editing_menu]="editing_menu"></app-form>
 </div>
 <div class="" *ngIf="selected_type=='html'">
-	<app-html  [editing_menu]="editing_menu"></app-html>
+	<app-form  [editing_menu]="editing_menu"></app-form>
+</div>
+<div class="" *ngIf="selected_type=='grid'">
+	<app-form  [editing_menu]="editing_menu"></app-form>
+</div>
+<div class="" *ngIf="selected_type=='code'">
+	<app-form  [editing_menu]="editing_menu"></app-form>
 </div>
 			
 	  
