--- a/src/app/_layout/portal/portal.component.html
+++ b/src/app/_layout/portal/portal.component.html
@@ -4,7 +4,7 @@
       <div class="sidebar-sticky">
         <h3 class="h5 justify-content-between
           text text-center px-4 mt-2">
-          <span><strong class="text text-danger">nu</strong>.CRM</span>
+          <span><strong class="text text-primary">nu</strong>.CRM</span>
         </h3>
         <hr>
         <h6 class="sidebar-heading d-flex justify-content-between
