--- a/src/app/portal/config/object/object.component.html
+++ b/src/app/portal/config/object/object.component.html
@@ -17,7 +17,7 @@
 	</div>
 	<div class="px-2">
 		<div class="" *ngIf="selected=='form'">
-			<app-master-object-form [object]="object"></app-master-object-form>
+			<app-master-object-form (refreshConfig)="onRefreshConfig($emit)" [object]="object"></app-master-object-form>
 		</div>
 	</div>
 </div>
