--- a/src/app/master/element/textbox/textbox.component.html
+++ b/src/app/master/element/textbox/textbox.component.html
@@ -2,7 +2,7 @@
   <div class="col-12 form-group">
     <label>Label of this attribute:</label>
     <input class="form-control" maxlength="100" [dropSpecialCharacters]="true"
-      mask="" [(ngModel)]="el.label">
+      mask="" [(ngModel)]="element.label">
     <small class="text text-muted">For example: First Name, Sale Price, Address
       Line 1, etc</small>
   </div>
@@ -10,7 +10,7 @@
 <div class="bg-light pt-3 pb-1 mt-2">
   <div class="col-12 form-group">
     <label>Name of this attribute:</label>
-    <input class="form-control" mask="A*" maxlength="200" [(ngModel)]="el.name">
+    <input class="form-control" mask="A*" maxlength="200" [(ngModel)]="element.name">
     <small class="text text-danger"> Only alpha-numeric allowed. </small> <small
       class="text text-muted">For example: FirstName, RetailPrice, AddressLine1,
       etc.</small>
@@ -20,7 +20,7 @@
   <div class="row col form-group">
     <div class="col-lg-6 col-md-6 col-sm-6">
       <label>Is this a read-only field?</label>
-      <select class="form-control" [(ngModel)]="el.readonly">
+      <select class="form-control" [(ngModel)]="element.readonly">
         <option value="true">Yes</option>
         <option value="false">No</option>
       </select>
@@ -32,7 +32,7 @@
 <div class="bg-light pt-3 pb-1 mt-2">
   <div class="col-4 form-group">
     <label>Size or Width of this field on the form:</label>
-    <select class="form-control" [(ngModel)]="el.size">
+    <select class="form-control" [(ngModel)]="element.size">
       <option value="col-3">Small</option>
       <option value="col-6">Medium</option>
       <option value="col-12">Large</option>
