--- a/src/app/portal/config/object/settings/settings.component.html
+++ b/src/app/portal/config/object/settings/settings.component.html
@@ -1,1 +1,1 @@
-<app-master-object-form [object]="object"></app-master-object-form>
+<app-master-object-form (refreshConfig)="onRefreshConfig($emit)" [object]="object"></app-master-object-form>
