--- a/src/app/_layout/portal/portal.component.html
+++ b/src/app/_layout/portal/portal.component.html
@@ -45,6 +45,7 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/portal/contact']">
               <fa name="list-alt"></fa> Collections
+              <small>these are various master values</small>
             </a>
           </li>
           <li class="nav-item">
