--- a/src/app/portal/config/config.component.html
+++ b/src/app/portal/config/config.component.html
@@ -12,74 +12,48 @@
     <ul class="list-group">
       <li class="text-center cursor bg-light list-group-item text text-primary"
         (click)="onClick_AddObject()"><fa
-          name="plus"></fa> Add</li>
+          name="plus"></fa> Add Page</li>
       <li class="pt-2 pl-2 pr-2 pb-2 list-group-item cursor" id="obj_{{p._id}}"
         [class.active]="_id == p._id"
-        (click)="onClick_Item(p)" *ngFor="let p
+        (click)="onClick_Object(p)" *ngFor="let p
         of
         config?.config?.infra?.object">{{p.label}}</li>
     </ul>
+    <ul class="list-group mt-2">
+      <li class="text-center cursor bg-light list-group-item text text-primary"
+        (click)="onClick_AddMenu()"><fa
+          name="plus"></fa> Add Menu</li>
+      <li class="pt-2 pl-2 pr-2 pb-2 list-group-item cursor" id="obj_{{m._id}}"
+        [class.active]="_id == p._id"
+        (click)="onClick_Menu(p)" *ngFor="let m
+        of
+        config?.config?.infra?.menu">{{m.label}}</li>
+    </ul>
+    <lib-ngx-tree-component
+      [treeData]="myTree"
+      (ondragstart)="onDragStart($event)"
+      (ondragenter)="onDragEnter($event)"
+      (ondragleave)="onDragLeave($event)"
+      (ondrop)="onDrop($event)"
+      (onallowdrop)="onAllowDrop($event)"
+      (onadditem)="onAddItem($event)"
+      (onStartDeleteItem)="onStartDeleteItem($event)"
+      (onFinishDeleteItem)="onFinishDeleteItem($event)"
+      (onCancelDeleteItem)="onCancelDeleteItem($event)"
+      (onStartRenameItem)="onStartRenameItem($event)"
+      (onFinishRenameItem)="onFinishRenameItem($event)"
+      [config]='treeConfig'>
+    </lib-ngx-tree-component>
   </div>
 
-  <div class="col-10" *ngIf="is_adding_object == true">
-    <div class="card mr-2">
-      <div class="card-header">
-        Add An Object (An object is basically a page)
-      </div>
-      <div class="card-body pl-2 pr-2">
-        <div class="col-12 form-group">
-          <label class="text text-muted">Select the type of object or page you want to
-            create. An object can be a form, static content, a piece of javascript code or a grid for image gallery.</label>
-          <div class="row">
-            <div class="col">
-              <div class="form-check form-check-inline" *ngFor="let m of types">
-                <input class="form-check-input" (click)="onClick_CustomMenu(m)"
-                  [(ngModel)]="selected" [value]="m.name" id="{{m.name}}"
-                  type="radio">
-                <label class="form-check-label" for="{{m.name}}">{{m.name}}</label>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-12 form-group">
-          <label>Label</label>
-          <input class="form-control" maxlength="100"
-            [(ngModel)]="object.label">
-          <small class="text text-muted">For example: Clients, Portfolio,
-            Gallery, etc
-            Line 1, etc</small>
-        </div>
-        <div class="col-12 form-group">
-          <label>Name</label>
-          <input class="form-control" mask="A*" maxlength="200"
-            [(ngModel)]="object.name">
-          <small class="text text-danger">Only alpha-numeric allowed. </small>
-          <small
-            class="text text-muted">For example: clients, portfolio, gallery,
-            etc
-            Line 1, etc</small>
-        </div>
-        <div class="col-4 form-group">
-          <label>Status</label>
-          <select class="form-control" [(ngModel)]="object.status">
-            <option value="Active">Active</option>
-            <option value="InActive">InActive</option>
-          </select>
-        </div>
-      </div>
-      <div class="card-footer">
-        <button (click)="onClick_Submit()" class="float-left btn btn-primary">Submit</button>
-        <button (click)="onClick_TryDelete()" class="btn btn-outline-danger
-          float-right">Delete</button>
-      </div>
-    </div>
+  <div class="col-10" *ngIf="is_adding_object ==
+    true">
+    <app-object-create [object]="object"></app-object-create>
   </div>
-  <com-modal [forDelete]="true" (onSubmit)="onClick_DeleteObject()"></com-modal>
-  <div class="col-10" *ngIf="is_object_selected == false && is_adding_object ==
-    false">
-    <div class="row col-12"><span class="alert alert-info">Please select an item
-        from left.</span></div>
+
+  <div class="col-10" *ngIf="is_adding_menu ==
+    true">
+    <app-menu-create></app-menu-create>
   </div>
 
   <div class="col-10 col-lg-10 col-md-10 col-sm-10 pr-2"
@@ -87,28 +61,22 @@
     <nav>
       <div class="nav nav-tabs" id="nav-tab" role="tablist">
         <a class="nav-item nav-link active" id="nav-settings-tab"
-          data-toggle="tab"
-          href="#nav-settings" role="tab" aria-controls="nav-settings"
+          data-toggle="tab" href="#nav-settings" role="tab"
+          aria-controls="nav-settings"
           aria-selected="false">Settings</a>
-        <a class="nav-item nav-link" id="nav-layout-tab" å
+
+        <a class="nav-item nav-link" id="nav-layout-tab"
           data-toggle="tab" href="#nav-layout" role="tab"
           aria-controls="nav-layout" aria-selected="true">Layout</a>
+
         <a class="nav-item nav-link" id="nav-triggers-tab" data-toggle="tab"
           href="#nav-triggers" role="tab" aria-controls="nav-triggers"
           aria-selected="false">Triggers</a>
+
       </div>
     </nav>
     <div class="tab-content" id="nav-tabContent">
-      <div class="tab-pane fade" id="nav-layout" role="tabpanel"
-        aria-labelledby="nav-layout-tab">
-        <div class="border border-top-0 rounded-bottom">
-          <div class="row">
-            <div class="col ml-2 mr-2 mb-2">
-              <app-object-layout [object]="object"></app-object-layout>
-            </div>
-          </div>
-        </div>
-      </div>
+
       <div class="tab-pane fade show active" id="nav-settings" role="tabpanel"
         aria-labelledby="nav-settings-tab">
         <div class="border border-top-0 rounded-bottom">
@@ -120,6 +88,20 @@
           </div>
         </div>
       </div>
+
+
+      <div class="tab-pane fade" id="nav-layout" role="tabpanel"
+        aria-labelledby="nav-layout-tab">
+        <div class="border border-top-0 rounded-bottom">
+          <div class="row">
+            <div class="col ml-2 mr-2 mb-2">
+              <app-object-layout [object]="object"></app-object-layout>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
       <div class="tab-pane fade" id="nav-triggers" role="tabpanel"
         aria-labelledby="nav-triggers-tab">
         <div class="border border-top-0 rounded-bottom">
@@ -130,6 +112,7 @@
           </div>
         </div>
       </div>
+
     </div>
   </div>
 </div>
