--- a/src/app/portal/config/object/layout/layout.component.html
+++ b/src/app/portal/config/object/layout/layout.component.html
@@ -1,94 +1,12 @@
-<div class="row" *ngIf="is_adding_element == true">
-	<div class="col-12 mr-2 mt-3 mb-3">
-		<span class="cursor text text-primary"(click)="onClick_BackFromAddElement()"><fa
-				name="chevron-left"></fa> Back</span>
-	</div>
+<div *ngIf="object.type =='form'">
+	<app-master-object-form (refreshConfig)="onRefreshConfig($emit)"
+		[object]="object"></app-master-object-form>
 </div>
-<div class="row" *ngIf="is_adding_element == false">
-	<div class="col-12 mr-2 mt-3 mb-3">
-		<span class="cursor text text-primary"(click)="onClick_AddElement()"><fa
-				name="plus"></fa> Add Element</span>
-	</div>
+<div *ngIf="object.type =='static'">
+	<app-master-object-static (refreshConfig)="onRefreshConfig($emit)"
+		[object]="object"></app-master-object-static>
 </div>
-<div class="row" *ngIf="is_adding_element == false">
-	<div class="col-9">
-		<div class="card">
-			<div class="card-header pl-2">
-				Layout Elements
-			</div>
-			<div class="card-body pl-2">
-				<div class="row">
-					<div class="pt-1 form-row {{f.size}}" *ngFor="let f of
-						object?.fields">
-						<div class="form-group col-lg-12 col-md-12 col-md-12">
-							<!-- label -->
-							<label *ngIf="f.type !='checkbox'">{{f.label}} </label>
-							<!-- textarea -->
-							<textarea *ngIf="f.type=='textarea'"
-								placeholder="{{f.placeholder}}"
-								class="form-control" [(ngModel)]="el_list[f.name]">
-							</textarea>
-							<!-- text -->
-							<input *ngIf="f.type=='text'" placeholder="{{f.placeholder}}"
-								class="form-control" [(ngModel)]="el_list[f.name]">
-							<!-- select -->
-							<select *ngIf="f.type=='select'" class="form-control"
-								[(ngModel)]="el_list[f.name]">
-								<option *ngFor="let o of f.options" [value]="o.name">{{o.label}}</option>
-							</select>
-							<!-- checkbox -->
-							<div *ngIf="f.type=='checkbox'" class="custom-control
-								custom-checkbox custom-checkbox-switch">
-								<input type="hidden" [(ngModel)]="el_list[f.name]">
-								<input type="checkbox" class="custom-control-input"
-									[checked]="el_list[f.name] === _bool[0].value"
-									(change)="$event.target.checked? (el_list[f.name]=
-									_bool[0].value):(el_list[f.name]= _bool[1].value)"
-									id="el_list[f.name]">
-								<label class="custom-control-label" style="padding-top:2px;"
-									for="el_list[f.name]"> {{f.label}} </label>
-								<button class="btn btn-sm btn-default">EDIT</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="col-3 pl-1">
-		<div class="">
-			<div cdkDropList
-				(cdkDropListDropped)="drop($event)">
-				<div class="border bg-light pb-2 pt-2 pl-1 pr-1 mb-1 mr-2" *ngFor="let f
-					of object?.fields" cdkDrag>
-					<div class="float-left cursor pb-2" cdkDragHandle>
-						<fa name="sort"></fa>
-					</div>&nbsp;
-					{{f.label}}&nbsp;<span
-						(click)="onClick_TryDelete(f)" class="float-right text text-danger mr-2
-						cursor">Delete</span>
-					&nbsp;
-					<span
-						(click)="onClick_EditElement(f)" class="float-right text text-primary
-						cursor mr-2">Edit</span>&nbsp;
-				</div>
-			</div>
-		</div>
-	</div>
+<div *ngIf="object.type =='code'">
+	<app-master-object-code (refreshConfig)="onRefreshConfig($emit)"
+		[object]="object"></app-master-object-code>
 </div>
-<div class="row" *ngIf="is_adding_element == true">
-	<div class="col-12">
-		<div class="card">
-			<div class="card-header pl-2">
-				Select an HTML element to add to the Form.
-			</div>
-			<div class="card-body pl-2">
-				<div class="">
-					<app-element [object]="object" [element]="element"></app-element>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-<com-modal [forDelete]="true" (onSubmit)="onClick_DeleteField()"></com-modal>
