--- a/src/app/cms/cms.component.html
+++ b/src/app/cms/cms.component.html
@@ -3,6 +3,8 @@
 		routerLinkActive="router-link-active" routerLinkActive="router-link-active"><img
 			src="/assets/logo.png" class='responsive pt-2 pb-2' height="80"></a>
 	<form class="float-right form-inline pt-4">
+		<a [routerLink]="['/auth/signin']" class="mr-3" routerLinkActive="router-link-active" >Login</a>
+
 		<span class="float-right mr-3"><fa class="fa-2x text-secondary"
 				name="twitter"></fa></span>
 		<span class="float-right mr-5"><fa class="fa-2x text-secondary"
